# Fomalhaut

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
examples/: example.cpp
include/: base_component.cpp  base_component.h  base_system.cpp  base_system.h  component_pool.cpp  component_pool.h  ecs_define.h  ecs_functional.h  ecs_iterator.h  entity.cpp  entity.h  entity_admin.cpp  entity_admin.h
test/: ecs.cpp  ecs_test.cpp
test/common/: main.cpp
